:icons: font

= Gentics Mesh Changelog

== 0.10.3 (TBD)

icon:plus[] Core: The OrientDB graph database version was updated to version 2.2.27 

== 0.10.2 (14.09.2017)

icon:check[] Java REST Client: A potential threading issue within the Java REST Client has been fixed. Vert.x http clients will no longer be shared across multiple threads.

icon:check[] Fixed handling "required" and "allow" properties of schema fields when adding fields to schemas.

icon:plus[] The *Webroot-Response-Type* header can now be used to differentiate between a webroot binary and node responses. The values of this header can either be *binary* or *node*.

icon:plus[] The `/api/v1/admin/status/migrations` endpoint was removed. 
            The status of a migration job can now be obtained via the `/api/v1/admin/jobs` endpoint. Successfully executed jobs will no longer be removed from the job list.

icon:plus[] The `/api/v1/:projectName/release/:releaseUuid/schemas` and `/api/v1/:projectName/release/:releaseUuid/microschemas` endpoint has been reworked.
            The response format has been updated. The status and uuid of the job which has been invoked when the migration was started will now also be included in this response. 

== 0.10.1 (08.09.2017)

icon:plus[] Clustering: Added link:https://getmesh.io/docs/beta/clustering.html#_node_discovery[documentation] and support for cluster configurations which use a list of static IPs instead of multicast discovery.

icon:plus[] Node Migration: The node migration performance has been increased.

icon:plus[] REST: Added new endpoints `/api/v1/admin/jobs` to list and check queued migration jobs. The new endpoints are described in the link:/docs/beta/features.html#_executing_migrations[feature documentation].

icon:check[] Search: The `raw` field will no longer be added by default to the search index. Instead it can be added using the new `searchIndex.addRaw` flag within the schema field.