@@ -1,7 +1,9 @@
 package com.gentics.mesh.core.role;
 
 import static com.gentics.mesh.assertj.MeshAssertions.assertThat;
+import static com.gentics.mesh.core.data.relationship.GraphPermission.DELETE_PERM;
 import static com.gentics.mesh.core.rest.common.Permission.CREATE;
+import static com.gentics.mesh.core.rest.common.Permission.DELETE;
 import static com.gentics.mesh.core.rest.common.Permission.READ;
 import static com.gentics.mesh.core.rest.common.Permission.UPDATE;
 import static io.netty.handler.codec.http.HttpResponseStatus.NOT_FOUND;
@@ -17,6 +19,7 @@ import com.gentics.mesh.core.data.relationship.GraphPermission;
 import com.gentics.mesh.core.data.schema.MicroschemaContainer;
 import com.gentics.mesh.core.rest.common.GenericMessageResponse;
 import com.gentics.mesh.core.rest.common.Permission;
+import com.gentics.mesh.core.rest.project.ProjectResponse;
 import com.gentics.mesh.core.rest.role.RolePermissionRequest;
 import com.gentics.mesh.core.rest.role.RolePermissionResponse;
 import com.gentics.mesh.test.context.AbstractMeshTest;
@@ -138,6 +141,31 @@ public class RoleEndpointPermissionsTest extends AbstractMeshTest {
 			assertMessage(message, "role_updated_permission", role().getName());
 			assertFalse("The role should no longer have delete permission on the group.", role().hasPermission(GraphPermission.DELETE_PERM, group()));
 		}
+
+	}
+
+	@Test
+	public void testGrantPermToProjectByName() {
+		try (Tx tx = tx()) {
+			// Add permission on own role
+			role().grantPermissions(role(), GraphPermission.UPDATE_PERM);
+			assertTrue(role().hasPermission(GraphPermission.DELETE_PERM, tagFamily("colors")));
+		}
+
+		String pathToElement = PROJECT_NAME + "/tagFamilies/" + tx(() -> tagFamily("colors").getUuid());
+		RolePermissionResponse response = call(() -> client().readRolePermissions(roleUuid(), pathToElement));
+		assertThat(response).hasPerm(Permission.values());
+
+		response = call(() -> client().readRolePermissions(roleUuid(), "/" + PROJECT_NAME));
+		assertThat(response).hasPerm(Permission.values());
+
+		tx(() -> role().revokePermissions(project(), DELETE_PERM));
+
+		response = call(() -> client().readRolePermissions(roleUuid(), "/" + PROJECT_NAME));
+		assertThat(response).hasNoPerm(DELETE);
+
+		ProjectResponse projectResponse = call(() -> client().findProjectByUuid(projectUuid()));
+		assertFalse(projectResponse.getPermissions().hasPerm(DELETE));
 
 	}
 
