@@ -1,0 +1,11 @@
+{
+	"user/admin": "e5861ba26b914b21861ba26b91ab211a",
+	"user/anonymous": "5fb9654c0b734e87b9654c0b736e8701",
+
+	"role/admin": "cc9999a4194d4f069999a4194d1f06d7",
+	"role/anonymous": "be703d9cccdf4771b03d9cccdff771c1",
+
+	"group/admin": "25ba1622a1f7458fba1622a1f7658fea",
+	"group/anonymous": "265629b256c54ae99629b256c5eae968",
+}
+
