@@ -97,13 +97,13 @@ ul.doc-toc h2 {
                                 <a href="administration-guide.html#_run_with_docker">Run with Docker</a>
                             </li>
                             <li>
-                                <a href="administration-guide.html#_installation_directory">Installation Directory</a>
+                                <a href="administration-guide.html#installdir">Installation Directory</a>
                             </li>                            
                             <li>
                                 <a href="administration-guide.html#_system_requirements">System Requirements</a>
                             </li>
                             <li>
-                                <a href="administration-guide.html#_configuration_settings">Configuration & Settings</a>
+                                <a href="administration-guide.html#conf">Configuration & Settings</a>
                             </li>
                             <li>
                                 <a href="administration-guide.html#_backup_recovery">Backup &amp; Recovery</a>
