@@ -8,6 +8,7 @@ import java.util.stream.Collectors;
 
 import org.assertj.core.api.AbstractAssert;
 
+import com.gentics.mesh.core.data.relationship.GraphPermission;
 import com.gentics.mesh.core.rest.common.Permission;
 import com.gentics.mesh.core.rest.common.PermissionInfo;
 
@@ -23,6 +24,15 @@ public class PermissionInfoAssert extends AbstractAssert<PermissionInfoAssert, P
 		List<String> mustHave = Arrays.asList(permissions).stream().map(e -> e.getName()).collect(Collectors.toList());
 		assertThat(hasPerm).containsAll(mustHave);
 		return this;
+	}
+
+	public PermissionInfoAssert hasNoPerm(Permission... permissions) {
+		List<String> hasPerm = actual.asMap().entrySet().stream().filter(p -> p.getValue() == true).map(e -> e.getKey().getName())
+				.collect(Collectors.toList());
+		List<String> mustNotHave = Arrays.asList(permissions).stream().map(e -> e.getName()).collect(Collectors.toList());
+		assertThat(hasPerm).doesNotContain(mustNotHave.toArray(new String[mustNotHave.size()]));
+		return this;
+
 	}
 
 }
